--- a/.yadm/repo.git/config
+++ b/.yadm/repo.git/config
@@ -10,3 +10,9 @@
 	showUntrackedFiles = no
 [yadm]
 	managed = true
+[remote "origin"]
+	url = https://github.com/kgnugur/dotfiles.git
+	fetch = +refs/heads/*:refs/remotes/origin/*
+[branch "master"]
+	remote = origin
+	merge = refs/heads/master
