--- a/.config/i3/config
+++ b/.config/i3/config
@@ -233,16 +233,16 @@ set $ws9 "9"
 set $ws10 "10"
 
 # assign workspaces to screens
-workspace 1 output HDMI-1-2
-workspace 2 output HDMI-1-2
-workspace 3 output HDMI-1-2
-workspace 4 output HDMI-1-2
-workspace 5 output HDMI-1-2
-workspace 6 output eDP-1-1
-workspace 7 output eDP-1-1
-workspace 8 output eDP-1-1
-workspace 9 output eDP-1-1
-workspace 10 output eDP-1-1
+workspace 1 output HDMI2
+workspace 2 output HDMI2
+workspace 3 output HDMI2
+workspace 4 output HDMI2
+workspace 5 output HDMI2
+workspace 6 output eDP1
+workspace 7 output eDP1
+workspace 8 output eDP1
+workspace 9 output eDP1
+workspace 10 output eDP1
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
