--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -15,6 +15,6 @@
   </alias>
   <alias>
     <family>monospace</family>
-    <prefer><family>Fira Monospace</family></prefer>
+    <prefer><family>Inconsolata</family></prefer>
   </alias>
 </fontconfig>
