--- a/.config/i3/config
+++ b/.config/i3/config
@@ -242,7 +242,7 @@ workspace 6 output eDP-1
 workspace 7 output eDP-1
 workspace 8 output eDP-1
 workspace 9 output eDP-1
-workspace 10 output eD-P1
+workspace 10 output eDP-1
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -329,3 +329,4 @@ bindsym XF86AudioPrev exec playerctl previous
 
 
 new_window pixel
+
