--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -6,35 +6,6 @@ glx-no-rebind-pixmap = true;
 vsync = "opengl-swc";
 unredir-if-possible = false;
 
-# Shadow
-shadow = true;
-# no-dnd-shadow = true;
-no-dock-shadow = true;
-clear-shadow = true;
-detect-rounded-corners = true;
-shadow-radius = 5;
-shadow-offset-x = 1;
-shadow-offset-y = 1;
-shadow-opacity = .3;
-shadow-ignore-shaped = false;
-shadow-exclude = [
-	"name = 'Notification'",
-# workaround for conky until it provides window properties:
-	"override_redirect = 1 && !WM_CLASS@:s",
-    "class_g ?= 'Dmenu'",
-#	"class_g ?= 'Dunst'",
-# disable shadows for hidden windows:
-	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-	"_GTK_FRAME_EXTENTS@:c",
-# disables shadows on sticky windows:
-#	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'",
-# disables shadows on i3 frames
-	"class_g ?= 'i3-frame'"
-];
-
-
-# shadow-exclude-reg = "x10+0+0";
-# xinerama-shadow-crop = true;
 
 #menu-opacity = 0.95;
 #inactive-opacity = 0.93;
@@ -44,7 +15,7 @@ shadow-exclude = [
 #blur-background = false;
 #blur-kern = "3x3box";
 
-fading = false;
+fading = true;
 fade-delta = 1;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
@@ -100,8 +71,4 @@ wintypes :
     focus = true;
   };
 };
-
-
-
-
 
