--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,8 +2,8 @@
 # #---Basic Definitions---# #
 # Needed for i3-gaps
 for_window [class="^.*"] border pixel 2
-gaps inner 6
-gaps outer 3
+gaps inner 8
+gaps outer 4
 set $term --no-startup-id $TERMINAL
 set $mod Mod4
 set $shutdown sudo -A shutdown -h now
@@ -40,12 +40,10 @@ exec --no-startup-id feh --bg-scale ~/.config/wall.jpg
 exec --no-startup-id dunst
 # Composite manager:
 exec --no-startup-id compton
-# Runs the key remapping scripts
+# Runs the key remapping script
 exec --no-startup-id remaps
 # Unclutter makes the mouse invisible after a brief period
 exec --no-startup-id unclutter
-# Run the script to update the mpd i3block on change.
-# exec --no-startup-id i3mpdupdate
 
 
 # Set Xresources colors:
@@ -107,7 +105,6 @@ bindsym $mod+Shift+Escape 	exec --no-startup-id prompt "Exit i3?" "i3-msg exit"
 bindsym $mod+Shift+BackSpace	exec --no-startup-id prompt "Reboot computer?" "$reboot"
 
 bindsym $mod+quotedbl	exec --no-startup-id dmenuunicode
-#bindsym $mod+asciitilde
 
 
 #STOP/HIDE EVERYTHING:
@@ -115,7 +112,6 @@ bindsym $mod+Shift+Delete	exec --no-startup-id lmc truemute ; exec --no-startup-
 
 # Show selection:
 bindsym $mod+Shift+Insert	exec --no-startup-id showclip
-# bindsym $mod+Pause		exec --no-startup-id xcqr
 
 
 # #---Letter Key Bindings---# #
@@ -135,7 +131,7 @@ bindsym $mod+Shift+r		exec $term -e sudo ranger /
 bindsym $mod+t			split toggle
 bindsym $mod+Shift+t		gaps inner current set 6; gaps outer current set 3
 
- bindsym $mod+y			exec $term -e calcurse
+bindsym $mod+y			exec $term -e calcurse
 bindsym $mod+Shift+y		exec --no-startup-id i3resize left
 
 bindsym $mod+u			exec --no-startup-id ddspawn tmuxdd
@@ -147,28 +143,18 @@ bindsym $mod+Shift+I		exec --no-startup-id i3resize up
 bindsym $mod+o			sticky toggle
 bindsym $mod+Shift+o		exec --no-startup-id i3resize right
 
-# bindsym $mod+p		exec --no-startup-id lmc toggle
-# bindsym $mod+Shift+p		exec --no-startup-id lmc pause
-
 bindsym $mod+a			exec --no-startup-id ddspawn dropdowncalc -f mono:pixelsize=24
 bindsym $mod+Shift+a		exec $term -e pulsemixer
 
 bindsym $mod+s			gaps inner current plus 5
 bindsym $mod+Shift+s		gaps inner current minus 5
 
-# bindsym $mod+d			exec --no-startup-id dmenu_run
 bindsym $mod+d exec dmenu_run -fn 'Monospace-14' -nb '#32302f' -nf '#ebdbb2' -sb '#458588' -sf '#ebdbb2'
 bindsym $mod+Shift+d		gaps inner current set 0; gaps outer current set 0
 
-set $freeze Distraction-free mode (super+shift+f to reactivate bindings)
-mode "$freeze" { bindsym $mod+Shift+f mode "default"
-}
-
 bindsym $mod+f			fullscreen toggle
-bindsym $mod+Shift+f		mode "$freeze" ;; exec --no-startup-id notify-send "<b>Distraction-free mode activated.</b> Press Super+Shift+f to return."
 
 bindsym $mod+g			workspace prev
-# bindsym $mod+Shift+g		exec --no-startup-id gimp; workspace $ws5
 
 bindsym $mod+h			focus left
 bindsym $mod+Shift+h		move left 30
@@ -185,7 +171,7 @@ bindsym $mod+Shift+l		move right 30
 bindsym $mod+z			gaps outer current plus 5
 bindsym $mod+Shift+z		gaps outer current minus 5
 
-bindsym $mod+x			exec --no-startup-id lockscreen
+bindsym $mod+x			exec --no-startup-id i3lock -i .config/locked.png
 bindsym $mod+Shift+x		exec --no-startup-id prompt "Shutdown computer?" "$shutdown"
 
 bindsym $mod+c			exec --no-startup-id code; exec notify-send -i VSCode "Opening VSCode" -t 1000
@@ -198,11 +184,11 @@ bindsym $mod+Shift+c		exec --no-startup-id code_samedir
 bindsym $mod+b			bar mode toggle
 bindsym $mod+Shift+b		floating toggle; sticky toggle; exec --no-startup-id bottomleft
 
-# bindsym $mod+n		exec $term -e newspod
+# bindsym $mod+n
 ##bindsym $mod+Shift+n
 
 bindsym $mod+m exec --no-startup-id i3spotify
-# bindsym $mod+Shift+m		exec --no-startup-id lmc mute
+# bindsym $mod+Shift+m
 
 
 # #---Workspace Bindings---# #
@@ -291,8 +277,8 @@ bindsym $mod+F8		exec --no-startup-id ~/.config/mutt/etc/mailsync.sh
 bindsym $mod+F9		exec --no-startup-id dmenumount
 bindsym $mod+F10	exec --no-startup-id dmenuumount
 # Switch between internal and external sound
-bindsym $mod+F11 exec pacmd set-card-profile alsa_card.pci-0000_00_1f.3 output:analog-stereo && pkill -RTMIN+1 i3blocks
-bindsym $mod+F12 exec pacmd set-card-profile alsa_card.pci-0000_00_1f.3 output:iec958-stereo && pkill -RTMIN+1 i3blocks
+bindsym $mod+F11 exec pacmd set-card-profile alsa_card.pci-0000_00_1f.3 output:analog-stereo && pkill -RTMIN+1 i3blocks && notify-send -i Output "Output changed to external" -t 1500
+bindsym $mod+F12 exec pacmd set-card-profile alsa_card.pci-0000_00_1f.3 output:iec958-stereo && pkill -RTMIN+1 i3blocks && notify-send -i Output "Output changed to internal" -t 1500
 
 # #---Arrow Keys---# #
 bindsym $mod+Left focus left
@@ -307,6 +293,8 @@ bindsym $mod+Shift+Right move right
 # Screenshot and recording
 bindsym Print       exec --no-startup-id scrot
 bindsym Shift+Print     exec --no-startup-id scrot -u
+bindsym Mod1+Sys_Req     exec --no-startup-id scrot -s
+
 bindsym $mod+Print		exec --no-startup-id dmenurecord
 bindsym $mod+Scroll_Lock	exec --no-startup-id "killall screenkey || screenkey"
 bindsym $mod+Delete		exec $stoprec
@@ -318,20 +306,13 @@ bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 5%+ && pkill -R
 bindsym Shift+XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 15%+ && pkill -RTMIN+1 i3blocks
 bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 5%- && pkill -RTMIN+1 i3blocks
 bindsym Shift+XF86AudioLowerVolume exec amixer -q -D pulse sset Master 15%- && pkill -RTMIN+1 i3blocks
-
 bindsym XF86AudioMute exec amixer -q -D pulse sset Master toggle && pkill -RTMIN+1 i3blocks
-
 
 bindsym XF86MonBrightnessUp exec xbacklight -inc 15 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 15 # decrease screen brightness
 
 bindsym XF86AudioPlay exec playerctl play-pause
-# I guess spotify doest support stop: pause + go to second 0
 bindsym XF86AudioStop exec playerctl stop
-# bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
-
-
-new_window pixel
 
