--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -697,3 +697,13 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+
+
+# General
+map D console delete
+
+#Image commands
+map bg shell cp %f ~/.config/wall.png && feh --bg-scale %f
+map bw shell wal -c -i %f && cp %f ~/.config/wall.png
+map C shell killall w3mimgdisplay && convert -rotate 90 %s %s
