--- a/.config/pcmanfm/default/pcmanfm.conf
+++ b/.config/pcmanfm/default/pcmanfm.conf
@@ -9,7 +9,7 @@ autorun=1
 [ui]
 always_show_tabs=0
 max_tab_chars=32
-win_width=1890
+win_width=938
 win_height=1026
 splitter_pos=122
 media_in_new_tab=0
@@ -20,7 +20,7 @@ focus_previous=0
 side_pane_mode=places
 view_mode=list
 show_hidden=0
-sort=name;ascending;
+sort=mtime;ascending;
 toolbar=newtab;navigation;home;
 show_statusbar=1
 pathbar_mode_buttons=0
