--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,8 +2,8 @@
 # #---Basic Definitions---# #
 # Needed for i3-gaps
 for_window [class="^.*"] border pixel 3
-gaps inner 8
-gaps outer 4
+gaps inner 6
+gaps outer 3
 set $term --no-startup-id $TERMINAL
 set $mod Mod4
 set $shutdown sudo -A shutdown -h now
@@ -149,7 +149,8 @@ bindsym $mod+Shift+a		exec $term -e pulsemixer
 bindsym $mod+s			gaps inner current plus 5
 bindsym $mod+Shift+s		gaps inner current minus 5
 
-bindsym $mod+d exec dmenu_run -fn 'Monospace-14' -nb '#32302f' -nf '#ebdbb2' -sb '#458588' -sf '#ebdbb2'
+# bindsym $mod+d exec dmenu_run -fn 'Monospace-14' -nb '#32302f' -nf '#ebdbb2' -sb '#458588' -sf '#ebdbb2'
+bindsym $mod+d exec dmenu_run -fn 'Monospace-14' -nb '$darkblack' -nf '$white' -sb '$darkblue' -sf '$white'
 bindsym $mod+Shift+d		gaps inner current set 0; gaps outer current set 0
 
 bindsym $mod+f			fullscreen toggle
