--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,15 +1,16 @@
 # vim:filetype=i3config
+
 # #---Basic Definitions---# #
-# Needed for i3-gaps
-for_window [class="^.*"] border pixel 3
-gaps inner 6
-gaps outer 3
-set $term --no-startup-id $TERMINAL
+for_window [class="^.*"] border pixel 2
+gaps inner 10
+gaps outer -5
+
 set $mod Mod4
+set $term --no-startup-id $TERMINAL
 set $shutdown sudo -A shutdown -h now
 set $reboot sudo -A reboot
-set $netrefresh --no-startup-id sudo -A systemctl restart NetworkManager
 set $hibernate sudo -A systemctl suspend
+set $netrefresh --no-startup-id sudo -A systemctl restart NetworkManager
 set $stoprec --no-startup-id dmenurecord kill
 
 # #---Dropdown Windows---# #
@@ -30,19 +31,12 @@ for_window [instance="dropdowncalc"] border pixel 2
 for_window [instance="dropdowncalc"] sticky enable
 
 # #---Starting External Scripts---# #
-# exec --no-startup-id hotplug_monitor
 exec --no-startup-id redshift -l 39.979205:32.614248
-#exec --no-startup-id nm-applet
 exec --no-startup-id udiskie
-# Setting the background and colorscheme:
 exec --no-startup-id feh --bg-scale ~/.config/wall.jpg
-# Starts dunst for notifications:
 exec --no-startup-id dunst
-# Composite manager:
 exec --no-startup-id compton
-# Runs the key remapping script
 exec --no-startup-id remaps
-# Unclutter makes the mouse invisible after a brief period
 exec --no-startup-id unclutter
 
 
@@ -93,7 +87,7 @@ bar {
 # #---Basic Bindings---# #
 bindsym $mod+Return exec $term
 bindsym $mod+Shift+Return	exec --no-startup-id samedir
-bindsym $mod+Mod1+Return	exec alacritty
+# bindsym $mod+Mod1+Return	exec alacritty
 
 bindsym $mod+Shift+space 	floating toggle
 bindsym $mod+space		focus mode_toggle
@@ -129,7 +123,7 @@ bindsym $mod+r 			exec $term -e ranger
 bindsym $mod+Shift+r		exec $term -e sudo ranger /
 
 bindsym $mod+t			split toggle
-bindsym $mod+Shift+t		gaps inner current set 6; gaps outer current set 3
+bindsym $mod+Shift+t		gaps inner current set 10; gaps outer current set -5
 
 bindsym $mod+y			exec $term -e calcurse
 bindsym $mod+Shift+y		exec --no-startup-id i3resize left
@@ -149,7 +143,6 @@ bindsym $mod+Shift+a		exec $term -e pulsemixer
 bindsym $mod+s			gaps inner current plus 5
 bindsym $mod+Shift+s		gaps inner current minus 5
 
-# bindsym $mod+d exec dmenu_run -fn 'Monospace-14' -nb '#32302f' -nf '#ebdbb2' -sb '#458588' -sf '#ebdbb2'
 bindsym $mod+d exec dmenu_run -fn 'Monospace-14' -nb '$darkblack' -nf '$white' -sb '$darkblue' -sf '$white'
 bindsym $mod+Shift+d		gaps inner current set 0; gaps outer current set 0
 
@@ -176,7 +169,6 @@ bindsym $mod+x			exec --no-startup-id i3lock -i .config/locked.png
 bindsym $mod+Shift+x		exec --no-startup-id prompt "Shutdown computer?" "$shutdown"
 
 bindsym $mod+c			exec --no-startup-id code; exec notify-send -i VSCode "Opening VSCode" -t 1000
-bindsym $mod+Shift+c		exec --no-startup-id code_samedir
 # bindsym $mod+Shift+c		exec --no-startup-id camtoggle
 
 # bindsym $mod+v			exec $term -e ncmpcpp -s visualizer
@@ -269,7 +261,6 @@ bindsym $mod+F7		exec --no-startup-id td-toggle
 bindsym $mod+F8		exec --no-startup-id ~/.config/mutt/etc/mailsync.sh
 bindsym $mod+F9		exec --no-startup-id dmenumount
 bindsym $mod+F10	exec --no-startup-id dmenuumount
-# Switch between internal and external sound
 bindsym $mod+F11 exec pacmd set-card-profile alsa_card.pci-0000_00_1f.3 output:analog-stereo && pkill -RTMIN+1 i3blocks && notify-send -i Output "Output changed to external" -t 1500
 bindsym $mod+F12 exec pacmd set-card-profile alsa_card.pci-0000_00_1f.3 output:iec958-stereo && pkill -RTMIN+1 i3blocks && notify-send -i Output "Output changed to internal" -t 1500
 
@@ -283,7 +274,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# Screenshot and recording
+# #---Screenshot and recording---# #
 bindsym Print       exec --no-startup-id scrot
 bindsym Shift+Print     exec --no-startup-id scrot -u
 bindsym Mod1+Sys_Req     exec --no-startup-id scrot -s
