--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,7 +3,7 @@
 # #---Basic Definitions---# #
 for_window [class="^.*"] border pixel 2
 gaps inner 10
-gaps outer -5
+gaps outer -10
 
 set $mod Mod4
 set $term --no-startup-id $TERMINAL
@@ -31,13 +31,13 @@ for_window [instance="dropdowncalc"] border pixel 2
 for_window [instance="dropdowncalc"] sticky enable
 
 # #---Starting External Scripts---# #
-exec --no-startup-id redshift -l 39.979205:32.614248
-exec --no-startup-id udiskie
-exec --no-startup-id feh --bg-scale ~/.config/wall.jpg
-exec --no-startup-id dunst
-exec --no-startup-id compton
-exec --no-startup-id remaps
-exec --no-startup-id unclutter
+# exec --no-startup-id redshift -l 39.979205:32.614248
+# exec --no-startup-id udiskie
+# exec --no-startup-id feh --bg-scale ~/.config/wall.jpg
+# exec --no-startup-id dunst
+# exec --no-startup-id compton
+# exec --no-startup-id remaps
+# exec --no-startup-id unclutter
 
 
 # Set Xresources colors:
