--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -11,7 +11,7 @@ unredir-if-possible = false;
 #inactive-opacity = 0.93;
 #active-opacity = 1;
 #alpha-step = 0.01;
-#inactive-dim = 0.0;
+inactive-dim = 0.05;
 #blur-background = false;
 #blur-kern = "3x3box";
 
