--- a/.config/pcmanfm/default/pcmanfm.conf
+++ b/.config/pcmanfm/default/pcmanfm.conf
@@ -10,7 +10,7 @@ autorun=1
 always_show_tabs=0
 max_tab_chars=32
 win_width=860
-win_height=1053
+win_height=349
 splitter_pos=122
 media_in_new_tab=0
 desktop_folder_new_win=0
@@ -21,6 +21,7 @@ side_pane_mode=places
 view_mode=list
 show_hidden=0
 sort=name;ascending;
+columns=name:200;desc:159;size;mtime;
 toolbar=newtab;navigation;home;
 show_statusbar=1
 pathbar_mode_buttons=0
