--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,5 +1,7 @@
 {
   "diagnostic.displayByAle": true,
   "javascript.suggestionActions.enabled": false,
-  "emmet.includeLanguages": { "pug": "jade" }
+  "emmet.includeLanguages": { "pug": "jade", "jst": "jest" },
+  "tsserver.log": "verbose",
+  "suggest.timeout": 4000
 }
