--- a/.config/pcmanfm/default/pcmanfm.conf
+++ b/.config/pcmanfm/default/pcmanfm.conf
@@ -11,7 +11,7 @@ always_show_tabs=0
 max_tab_chars=32
 win_width=1052
 win_height=1053
-splitter_pos=122
+splitter_pos=169
 media_in_new_tab=0
 desktop_folder_new_win=0
 change_tab_on_drop=1
@@ -20,7 +20,7 @@ focus_previous=0
 side_pane_mode=places
 view_mode=list
 show_hidden=0
-sort=name;ascending;
+sort=size;ascending;
 columns=name:200;desc:159;size:55;mtime;
 toolbar=newtab;navigation;home;
 show_statusbar=1
